2012-06-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	- 不要なコンソール出力を削除

	* rcsc/action/body_stop_dash.cpp:
	- ほぼ同じ効果が得られる場合はスタミナ消費が小さいものを選択するように変更

	* rcsc/common/stamina_model.cpp:
	* rcsc/common/stamina_model.h:
	- getSafetyDashPower()の第3引数で残すスタミナの値を指定できるように変更

	* rcsc/geom/line_2d.h:
	- インデント修正

2012-06-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_kick_to_relative.cpp:
	* rcsc/action/body_kick_to_relative.h:
	- 敵の妨害チェック関数を追加．実際にはまだ使用していない
	- 変数名命名規則の統一

	* rcsc/action/body_hold_ball2008.cpp:
	- ボールをキープする距離をkickable_margin*0.7から*0.5へ変更

2012-06-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/formation/formation.cpp:
	* rcsc/formation/formation.h:
	- フォーメーション設定ファイルにコメントを書き込むメソッドを追加

2012-06-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/player_object.cpp:
	- seeで認識したがタックルを観測出来なかった場合にカウントがリセッ
	トされていたバグを修正
	- 観測距離がvisible distanceより遠い場合はタックルカウントをリセットする

	* rcsc/action/body_smart_kick.cpp:
	* rcsc/action/kick_table.cpp:
	- デバッグ出力修正

	* rcsc/action/kick_table.cpp:
	- 衝突を起こすことがあるので，近い方の中間目標距離の率を0.2から0.3
	に戻した

2012-06-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/kick_table.cpp:
	* rcsc/action/kick_table.h:
	- キックノイズの影響でボールを制御範囲外に出してしまうことがあるの
	で，バッファの値を0.05から0.1へ変更
	- 蹴り出した後に敵に妨害されると判定されるとそのままreturnでループ
	を抜けてしまっていたので，続行できるようにcontinueに変更

	* rcsc/player/world_model.cpp:
	- 分身やワープが起きないように，信頼性が高くても背番号を認識できて
	いないプレイヤを先に消去する方針に変更

2012-05-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/action_effector.cpp:
	* rcsc/player/self_object.cpp:
	* rcsc/player/self_object.h:
	- キャッチコマンドを失敗した場合に実行時間をリセットしていた誤りを修正

2012-05-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.cpp:
	* rcsc/player/ball_object.h:
	* rcsc/player/world_model.cpp:
	- プレイモードに応じてボール位置が定まる場合の更新関数を追加

	* rcsc/player/player_object_updater.cpp:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- 新しいマッチングアルゴリズムの動作がまだ不安定なため，テスト完了するまで旧アルゴリズムに戻す
